--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 	<title>Student Advice Thread</title>
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	<link rel="stylesheet" href="style.css" />
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-	<div class='grid'>
+	<div id='filterApp' class='grid'>
 		<div class='head'>
 			<img id='logo' src='logo.png'>
 		</div>
 		<div class='thread'>
-			<div class='threadPost'>
+			<div v-if="seeExperienced" class='threadPost'>
 				<h3>Tips for How To Succeed In College</h3>
 				<div class='authorDate'>
 					<p>Posted by Anna Peterson</p>
@@ -73,7 +74,7 @@
 					Now you know nine tips that will help you succeed in college. Remember you don’t have to do it alone. A successful college experience requires more than academics. Follow these tips to have a complete and enriching experience in college.
 				</p>
 			</div>
-			<div class='threadPost'>
+			<div v-if="seeTeacher" class='threadPost'>
 				<h3>5 Essential Tips for How to Choose College Classes</h3>
 				<div class='authorDate'>
 					<p>Posted by Laura Smith</p>
@@ -103,7 +104,7 @@
 				Taking widely divergent courses allows you to acquire different types of knowledge and skills that you can connect and use together in new ways. This approach often leads to the development of innovative thinking, which is a highly prized skill in today's economy. And many employers love to hire people who can provide extra value outside of their main skill set.
 				</p>
 			</div>
-			<div class='threadPost'>
+			<div v-if="seeStudent" class='threadPost'>
 				<h3>4 Proven Tips on Setting Smart Goals for Students</h3>
 				<div class='authorDate'>
 					<p>Posted by Rory Spencer</p>
@@ -129,7 +130,7 @@
 				If you want to become a successful student, then you have to go to school for the right reasons. That means valuing results that have real substance instead of fleeting or elusive outcomes like fame, prestige, or recognition. Be honest with yourself about why you want to go to school. Make sure your reasons line up with things that stick around—such as personal development, acquiring marketable skills, improving your understanding of the world, improving your ability to provide for your family, and so on.
 				</p>
 			</div>
-			<div class='threadPost'>
+			<div v-if="seeNewGrad" class='threadPost'>
 				<h3>Exceeding in school.</h3>
 				<div class='authorDate'>
 					<p>Posted by Logan Grim</p>
@@ -148,7 +149,7 @@
 				<br><br>
 				</p>
 			</div>
-			<div class='threadPost'>
+			<div v-if="seeExperienced" class='threadPost'>
 				<h3>Focus on actually learning, not just on your grades.</h3>
 				<div class='authorDate'>
 					<p>Posted by Helen Sylph</p>
@@ -187,10 +188,10 @@
 					</div>
 					<br>
 					<div class='miscInfo'>
-						<button>Experienced</button>
-						<button>New Grad</button>
-						<button>Student</button>
-						<button>Teacher</button>
+						<button v-on:click="filterExperienced">Experienced</button>
+						<button v-on:click="filterNewGrad">New Grad</button>
+						<button v-on:click="filterStudent">Student</button>
+						<button v-on:click="filterTeacher">Teacher</button>
 					</div>
 				</div>
 				<div id='question' class='miscSection'>
@@ -231,5 +232,6 @@
 			</table>
 		</div>
 	</div>
+	<script type='text/javascript' src='./index.js'></script>
 </body>
 </html
